force-app/main/default/objects/Trailblazer__c.object
<CustomObject>
    <description>A custom object to hold Trailhead profiles for the trailhead leaderboard.</description>
    <label>Trailblazer</label>
    <nameField>
        <label>Trailblazer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trailblazers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>