force-app/main/default/objects/Trailblazer__c/fields/Badges__c.field-meta.xml
<CustomField>
    <fullName>Badges__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of Trailhead Badges</description>
    <label>Badges</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>