force-app/main/default/objects/Trailblazer__c/fields/Certifications__c.field-meta.xml
<CustomField>
    <fullName>Certifications__c</fullName>
    <description>Number of Salesforce Certifications</description>
    <label>Certifications</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>