force-app/main/default/objects/Trailblazer__c/fields/Company_Institution__c.field-meta.xml
<CustomField>
    <fullName>Company_Institution__c</fullName>
    <label>Company/Institution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>