force-app/main/default/objects/Trailblazer__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>Populated with any API or callout errors found during trailhead population.</description>
    <inlineHelpText>Populated with any API or callout errors found during trailhead population.</inlineHelpText>
    <label>Error Message</label>
    <type>TextArea</type>
</CustomField>