force-app/main/default/objects/Trailblazer__c/fields/Job_Role__c.field-meta.xml
<CustomField>
    <fullName>Job_Role__c</fullName>
    <label>Job Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>