force-app/main/default/objects/Trailblazer__c/fields/Points__c.field-meta.xml
<CustomField>
    <fullName>Points__c</fullName>
    <description>Number of Trailhead points</description>
    <label>Points</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>