force-app/main/default/objects/Trailblazer__c/fields/Profile_Handle__c.field-meta.xml
<CustomField>
    <fullName>Profile_Handle__c</fullName>
    <description>The custom handle of the Trailblazer&#39;s profile on Trailhead (ex: &quot;matruff&quot;)</description>
    <externalId>true</externalId>
    <label>Profile Handle</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>