force-app/main/default/objects/Trailblazer__c/fields/Profile_Id__c.field-meta.xml
<CustomField>
    <fullName>Profile_Id__c</fullName>
    <description>The Id of the Trailblazer&apos;s profile on Trailhead</description>
    <externalId>true</externalId>
    <label>Profile Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>