force-app/main/default/objects/Trailblazer__c/fields/Profile_Link__c.field-meta.xml
<CustomField>
    <fullName>Profile_Link__c</fullName>
    <description>Link to the Trailblazer&#39;s profile on Trailhead</description>
    <label>Profile Link</label>
    <type>Url</type>
</CustomField>