force-app/main/default/objects/Trailblazer__c/fields/Profile_Photo__c.field-meta.xml
<CustomField>
    <fullName>Profile_Photo__c</fullName>
    <description>Trailhead profile photo</description>
    <label>Profile Photo</label>
    <type>Url</type>
</CustomField>