force-app/main/default/objects/Trailblazer__c/fields/Rank__c.field-meta.xml
<CustomField>
    <fullName>Rank__c</fullName>
    <description>Trailhead Profile Rank</description>
    <label>Rank</label>
    <length>255</length>
    <type>Text</type>
</CustomField>