force-app/main/default/objects/Trailblazer__c/fields/Rank_Badge_Link__c.field-meta.xml
<CustomField>
    <fullName>Rank_Badge_Link__c</fullName>
    <description>Link to the Trailblazer&#39;s rank badge image</description>
    <label>Rank Badge Link</label>
    <type>Url</type>
</CustomField>