force-app/main/default/objects/Trailblazer__c/fields/Superbadges__c.field-meta.xml
<CustomField>
    <fullName>Superbadges__c</fullName>
    <description>Number of Trailhead Superbadges</description>
    <label>Superbadges</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>