force-app/main/default/objects/Trailblazer__c/fields/Trailblazer_Since__c.field-meta.xml
<CustomField>
    <fullName>Trailblazer_Since__c</fullName>
    <description>The date the Trailblazer started Trailhead</description>
    <label>Trailblazer Since</label>
    <length>255</length>
    <type>Text</type>
</CustomField>