force-app/main/default/objects/Trailblazer__c/fields/Trails__c.field-meta.xml
<CustomField>
    <fullName>Trails__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of Trailhead trails completed</description>
    <label>Trails</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>