force-app/main/default/objects/Trailblazer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Points__c</columns>
    <columns>Badges__c</columns>
    <columns>Trails__c</columns>
    <columns>Superbadges__c</columns>
    <columns>Certifications__c</columns>
    <columns>Profile_Handle__c</columns>
    <columns>Profile_Link__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>